2011-07-20  Valek Filippov

		* VSD: Fill/Line opacity -- "off by one"
		* VSD: Line cap mapping between VSD and SVG

2011-07-19  Valek Filippov

		* VSD: Add num of chars to ParaIX chunk.
		* VSD: Naive parsing of 'TextIX' chunk.
		* VSD: fix blocks parsing for strings in ver 6
		* VSD: complete Fill/Line parsing for ver 11 (transparency,cap,shadow offsets).

2011-07-16  Valek Filippov

		* VSD: fix version for chunks, tweek 'Char' to not parse ver11 fields in ver6 file
		* CDR: more 'loda' functions

2011-07-14  Valek Filippov

		* VSD: fix 'Line' blocks.
		* CDR: 'ftil' 

2011-07-14  Valek Filippov

		* CDR: loda header parsing.

2011-07-13  Valek Filippov

		* CDR: trfd parsing.

2011-07-13  Valek Filippov

		* Initial support for CDR.

2011-07-12  Valek Filippov

		* Parse VSD SplineStart/Knot.

2011-07-11  Valek Filippov

		* Parse FontFace for vsd ver 11.

2011-07-11  Valek Filippov

		* Fix issue with multiparsing of blocks in vsdchunks.

2011-07-09  Valek Filippov

		* Split WMF of emfparse, add more parsing for WMF records.

2011-07-08  Valek Filippov

		* Move 'Add record' from mfview
		* Change record size +-4 bytes
		* Move cursor to inserted record
		* Recalculate size, prevent reducing record <8 bytes

2011-07-07  Valek Filippov

		* Change SVM command names to CamelCase
		* Fix saving of WMF and EMFs, adding saving of SVMs

2011-07-06  Valek Filippov

		* More block parsing for vsdchunks
		* Support for different block start offset in v6 and v11.
		* Unified SVM entries, parsing of some records.

2011-07-04  Valek Filippov

		* Minimal support for Starview Metafiles (based on Inge Wallin/Pierre Ducroquet spec)

2011-07-04  Valek Filippov

		* Minimal support for regular and AP WMFs. Prevent saving for non-WMF files.
		* Parsing of 'Geometry' flags.
		* Parse 'Background Page' from 'Page' chunk.
		* Improved 'Char', added 'Para' and 'TextBlock' parsing.

2011-07-03  Valek Filippov
